src/objects/Hub_Membership__c.object
<CustomObject>
    <description>Contains records that indicate what Hub groups a person is a member of.</description>
    <fields>
        <fullName>Hub_Contact__c</fullName>
        <label>Hub Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Hub Memberships</relationshipLabel>
        <relationshipName>Hub_Memberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hub_Group_ID__c</fullName>
        <label>Hub Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Group_Link__c</fullName>
        <label>Hub Group Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Hub_Group_Name__c</fullName>
        <label>Hub Group Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hub User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Hub_Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Hub Membership</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HUB-{000000}</displayFormat>
        <label>Hub Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hub Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>